# Aircontrol

./: .gitignore  CMakeLists.txt  CentralWidget.cpp  CentralWidget.h  DataController.cpp  DataController.h  GISMapWidget.cpp  GISMapWidget.h  MainWindow.cpp  MainWindow.h  MapController.cpp  MapController.h  MenuController.cpp  MenuController.h  WindowController.cpp  WindowController.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  translator.h
resource/: resource.qrc
